ci-cd-pipeline/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: online-shop-service
  labels:
    app: online-shop
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: online-shop
  type: ClusterIP
